Fix margins on mobile

--- a/hkm/static/hkm/css/main.css
+++ b/hkm/static/hkm/css/main.css
@@ -6107,23 +6107,11 @@ span.no-postal-fee {
   max-height: 59px; }
 
 /* Container */
-@media (min-width: 1200px) {
-  .fullsize-container {
-    width: 100%; } }
-
-@media (min-width: 992px) {
-  .fullsize-container {
-    width: 100%; } }
-
-@media (min-width: 768px) {
-  .fullsize-container {
-    width: 100%; } }
-
 .fullsize-container {
-  margin-right: auto;
-  margin-left: auto;
-  padding-left: 30px;
-  padding-right: 30px; }
+  padding: 20px; }
+  @media (min-width: 650px) {
+    .fullsize-container {
+      padding: 20px 45px; } }
 
 /* Container - small & large */
 @media (min-width: 768px) {
@@ -6239,10 +6227,6 @@ span.no-postal-fee {
   background-size: contain; }
 
 /* SITE FOOTER */
-.row {
-  margin-left: 12px;
-  margin-right: 12px; }
-
 .footer-row {
   display: grid;
   grid-template-columns: 1fr;
@@ -6340,16 +6324,17 @@ span.no-postal-fee {
       min-height: 550px; } }
 
 .center-content {
-  width: 88%;
+  width: 100%;
   height: 100%;
-  margin: 0 auto;
+  padding: 0 20px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center; }
   @media (min-width: 650px) {
     .center-content {
-      align-items: normal; } }
+      align-items: normal;
+      padding: 0 45px; } }
 
 .welcome-text {
   height: 70%;
@@ -6402,14 +6387,17 @@ span.no-postal-fee {
   background-color: #f1f1f1;
   display: grid;
   width: 100%;
-  padding: 45px 20px; }
+  padding: 20px 0; }
   .public-collections__content h2,
   .home-page__featured h2 {
     color: #5268C2;
     margin: 30px 0 15px 0; }
 
 .home-page__featured {
-  padding: 45px; }
+  padding: 45px 20px; }
+  @media (min-width: 650px) {
+    .home-page__featured {
+      padding: 45px; } }
 
 .public-collections__wrapper,
 .featured__wrapper {
@@ -6518,8 +6506,7 @@ span.no-postal-fee {
 .public-collections__title {
   font: 48px "Signe", sans-serif;
   color: #5268C2;
-  margin-top: 0;
-  margin-left: 17px; }
+  margin-top: 0; }
   @media (max-width: 400px) {
     .public-collections__title {
       font-size: 30px; } }
@@ -6604,7 +6591,6 @@ span.no-postal-fee {
 .banner__h1 {
   line-height: 40px;
   margin: 0;
-  padding-left: 15px;
   display: inline-block;
   color: #5268C2;
   font: 48px "Signe", sans-serif; }
@@ -7375,7 +7361,7 @@ div.grid__fav.active {
 
 .search-form--banner {
   margin: 0;
-  padding: 15px 0 0 15px;
+  padding-top: 15px;
   width: 100%; }
 
 .search-form__field {
